src/App.css
.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 40vmin;
  pointer-events: none;
}

.App-header {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
}

#social-media {
  position: relative;
  min-height: 60px;
  min-width: 230px;
  position: absolute;
  bottom: 0;
  right: 0;
}

.social-media-content {
  max-height: 20%;
  width:auto;
}
.portrait {
  max-height: 60vh;
  width:auto;
}
#back-button{
  position: absolute;
  left: 5%;
  top: 16%;
  padding: 0;
  border: none;
  font-size: 40px;
  background: none;
  opacity: 0.3;
  filter: alpha(opacity=50);
}

#back-button:hover{
  padding: 0;
  border: none;
  background: none;
  opacity: 0.7;
  filter: alpha(opacity=50);
}

.butn {
  background: #E27C2C;
  background-image: -webkit-linear-gradient(top, #E27C2C, #F6DE72);
  background-image: -moz-linear-gradient(top, #E27C2C, #F6DE72);
  background-image: -ms-linear-gradient(top, #E27C2C, #F6DE72);
  background-image: -o-linear-gradient(top, #E27C2C, #F6DE72);
  background-image: linear-gradient(to bottom, #E27C2C, #F6DE72);
  -webkit-border-radius: 28;
  -moz-border-radius: 28;
  border-radius: 28px;
  -webkit-box-shadow: 0px 1px 3px #666666;
  -moz-box-shadow: 0px 1px 3px #666666;
  box-shadow: 0px 1px 3px #666666;
  font-family: Arial;
  color: #ffffff;
  font-size: 14px;
  padding: 7px 10px 7px 10px;
  text-decoration: none;
}

.butn:hover {
  background: #E27C2C;
  text-decoration: none;
}

.butn:disabled {
  background: rgba(171,171,171,1);
background: -moz-linear-gradient(top, rgba(171,171,171,1) 0%, rgba(166,166,166,1) 0%, rgba(158,158,158,1) 29%, rgba(191,191,191,1) 100%);
background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(171,171,171,1)), color-stop(0%, rgba(166,166,166,1)), color-stop(29%, rgba(158,158,158,1)), color-stop(100%, rgba(191,191,191,1)));
background: -webkit-linear-gradient(top, rgba(171,171,171,1) 0%, rgba(166,166,166,1) 0%, rgba(158,158,158,1) 29%, rgba(191,191,191,1) 100%);
background: -o-linear-gradient(top, rgba(171,171,171,1) 0%, rgba(166,166,166,1) 0%, rgba(158,158,158,1) 29%, rgba(191,191,191,1) 100%);
background: -ms-linear-gradient(top, rgba(171,171,171,1) 0%, rgba(166,166,166,1) 0%, rgba(158,158,158,1) 29%, rgba(191,191,191,1) 100%);
background: linear-gradient(to bottom, rgba(171,171,171,1) 0%, rgba(166,166,166,1) 0%, rgba(158,158,158,1) 29%, rgba(191,191,191,1) 100%);
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ababab', endColorstr='#bfbfbf', GradientType=0 );

}

